syntax = "proto3";

package com.hmproductions.bingo.actions;
option java_multiple_files = true;

import "models/Player.proto";

message AddPlayerRequest {
    models.Player player = 1;
    uint32 room_id = 2;
    string password = 3;
}

message AddPlayerResponse {

    enum StatusCode {
         OK = 0;
         ROOM_FULL = 1;
         COLOR_TAKEN = 2;
         ALREADY_IN_GAME = 3;
         ROOM_NOT_EXIST = 4;
         PASSWORD_MISMATCH = 5;
         SERVER_ERROR = 6;
    }

    StatusCode status_code = 1;
    string status_message = 2;
    uint32 room_id = 3;
}
